# power_mode

./: .travis.yml  README.md  README.rst  check.sh  pyproject.toml
.github/workflows/: verify.yml
bells/: bells.ino
combodisplay/: combodisplay.ino
contoller/: combodisplay.ino  contoller.ino
power_mode/: bells.py  display.py  main.py
strip/: strip.ino
tests/: test_balloon_fan_controller.py  test_bell_controller.py  test_game_manager.py  test_gamestate.py  test_power_mode.py  test_screen_controller.py  test_strip_controller.py
