[tool.poetry]
name = "power_mode"
version = "0.1.0"
description = ""
authors = ["Matt Bachmann <bachmann.matt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.3"
black = "^21.4b2"
pynput = "^1.7.3"
pyserial = "^3.5"
mypy = "^0.812"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
