[tool.poetry]
name = "power_mode"
version = "0.1.0"
description = ""
authors = ["Matt Bachmann <bachmann.matt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pynput = "^1.7.3"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b2"
mypy = "^0.812"
freezegun = "^1.1.0"
coverage = "^5.5"
isort = "^5.8.0"
pyflakes = "^2.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[mypy]
warn_return_any = true
warn_unused_configs = true

[mypy-pynput]
ignore_missing_imports = true

[mypy-pynput.keyboard]
ignore_missing_imports = true

[mypy-serial]
ignore_missing_imports = true

[mypy-serial.tools]
ignore_missing_imports = true